plugin/src/test/files/neg/orphan_definitions.check
orphan_definitions.scala:20: error: Orphan instance.
  implicit val foo1: Foo[Long] = new Foo[Long] {}
                                 ^
orphan_definitions.scala:24: error: Orphan instance.
    implicit val foo2: Foo[String] = new Foo[String] {}
                                     ^
two errors found
